Moving stuff from public to assets

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Center for Assessment • Open by Design</title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<link rel="icon" type="image/png" href="/public/favicon.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/assets/favicon.png" sizes="16x16">
 <style type="text/css">
 .responsive-container {
     position: relative;
@@ -26,7 +26,7 @@
 <div class="responsive-container">
     <div class="dummy"></div>
     <div class="img-container">
-        <img src="/public/CenterForAssessment_LOGO.svg" style="width: 60%;" />
+        <img src="/assets/CenterForAssessment_LOGO.svg" style="width: 60%;" />
     </div>
 </div>
 
