Adding meta-data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <title>Center for Assessment • Open by Design</title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<meta name="author" content="Center for Assessment" />
+<meta name="description" content="Center for Assessment • Open by Design">
+<meta name="viewport" content="width=device-width">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+<meta property="og:title" content="Center for Assessment • Open by Design" />
+<meta property="og:description" content="Center for Assessment • Open by Design"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://centerforassessment.github.io/"/>
+<meta property="og:image" content="https://cdn.rawgit.com/CenterForAssessment/centerforassessment.github.io/766faf48/assets/favicon.png"/>
+
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:site" content="@NCIEA1"/>
+<meta name="twitter:creator" content="@NCIEA1"/>
+<meta name="twitter:image" content="https://cdn.rawgit.com/CenterForAssessment/centerforassessment.github.io/766faf48/assets/favicon.png"/>
+<meta name="twitter:title" content="Center for Assessment • Open by Design"/>
+<meta name="twitter:description" content="Center for Assessment • Open by Design"/>
+
 <link rel="icon" type="image/png" href="/assets/favicon.png" sizes="16x16">
 <style type="text/css">
 .responsive-container {
