--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Center for Assessment • Open by Design</title>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 <meta name="author" content="Center for Assessment" />
 <meta name="description" content="Center for Assessment • Open by Design">
 <meta name="viewport" content="width=device-width">
